--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pino-pretty": "^5.1.0",
     "typescript": "~4.2",
     "youch": "^2.2.2",
-    "youch-terminal": "^1.1.1"
+    "youch-terminal": "^1.1.1",
+    "@types/socket.io": "^3.0.2"
   },
   "dependencies": {
     "@adonisjs/core": "^5.1.0",
@@ -23,6 +24,7 @@
     "mongoose": "^5.12.15",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.1.2",
     "source-map-support": "^0.5.19"
   },
   "adonisjs": {
